; ModuleID = '/home/carl/AnghaBench/vim.js/runtime/tools/extr_ccfilter.c_echogets.c'
source_filename = "/home/carl/AnghaBench/vim.js/runtime/tools/extr_ccfilter.c_echogets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LINELENGTH = common dso_local global i32 0, align 4
@stdin = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @echogets(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @LINELENGTH, align 4
  %8 = load i32, i32* @stdin, align 4
  %9 = call i8* @fgets(i8* %6, i32 %7, i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* @stderr, align 4
  %18 = call i32 @fputs(i8* %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %12, %2
  %20 = load i8*, i8** %5, align 8
  ret i8* %20
}

declare dso_local i8* @fgets(i8*, i32, i32) #1

declare dso_local i32 @fputs(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
